--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "^3.1.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "lodash.merge": "^4.6.2",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-countdown": "^2.2.1",
